# cogs

./: .gitignore  ChangeLog.md  LICENSE  Main.hs  cogs.cabal  cogs.el  default.nix  shell.nix
src/: Architecture.hs  Parse.hs~  X86.hs
src/Cogs/: Common.hs  LanguageDef.hs  Preprocessor.hs
src/Cogs/Instruction/: X86.hs
src/Cogs/Language/CalculusOfUnity/: Syntax.hs
src/Cogs/Language/CoC/: Syntax.hs
src/Cogs/Language/Cogs/Syntax/: AST.hs
src/Cogs/Language/Common/: Parser.hs  Pretty.hs  Syntax.hs
src/Cogs/Language/DTLC/: Evaluate.hs  Parser.hs  Pretty.hs  Syntax.hs  TypeCheck.hs
src/Cogs/Language/LambdaOmega/: Syntax.hs
src/Cogs/Language/STLC/: Syntax.hs
src/Cogs/Language/Sequent/Core/Syntax/: AST.hs
src/Cogs/Language/SystemF/: Evaluate.hs  Parser.hs  Pretty.hs  Syntax.hs  TypeCheck.hs
src/Cogs/Language/SystemFJ/: Syntax.hs
src/Cogs/Language/SystemT/: Evaluate.hs  Parser.hs  Pretty.hs  Syntax.hs  SystemT.hs  TypeCheck.hs
src/Commands/: Cogs.hs
src/Data/Number/: Algebraic.hs  Complex.hs  Natural.hs  Rational.hs  Real.hs  Transcendental.hs
src/Language/Cogs/: Parser.hs  Pretty.hs
src/Language/Cogs/Evaluation/: Evaluate.hs  Simplify.hs
src/Language/Cogs/Parser/: Parser.hs
src/Language/Cogs/Syntax/: AST.hs
src/Language/Cogs/Types/: DataKind.hs
src/Language/Sequent/Core/Evaluation/: Interpret.hs
src/Language/Sequent/Core/Syntax/: AST.hs
src/Language/Sequent/Untyped/Evaluation/: Interpret.hs
src/Language/Sequent/Untyped/Syntax/: AST.hs
src/Language/SequentCore/Evaluation/: Interpret.hs
src/Language/SequentCore/Syntax/: AST.hs
src/Language/SystemT/: SystemT.hs
tests/: Makefile  add2.cs  addZeros.cs  app.cs  app.hs  appe.cs  bind2.cs  bind2quant.cs  const.cs  foo.prs~  fortytwo.cs  id.cs  idApp.cs  kfun.cs  lam.cs  lamDT.cs  let1.cs  mu.cs  parens.cs  rec.cs  succ.cs  succ2.cs  var.cs
