name:                cogs
version:             0.1.0.0
synopsis:            A set of compilers for a set of languages
-- description:
homepage:            zachsully.com/cogs
license:             MIT
license-file:        LICENSE
author:              Zach Sullivan
maintainer:          zachsully@gmail.com
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  GHC-Options :       -Wall -j6
  exposed-modules:
                       -- Data.Number.Natural,
                       -- Data.Number.Rational,
                       -- Data.Number.Real,
                       -- Data.Number.Complex,
                       -- Language.Cogs.Evaluation.Evaluate,
                       -- Language.Cogs.Evaluation.Simplify,
                       -- Language.Cogs.Parser,
                       -- Language.Cogs.Pretty,
                       -- Language.Cogs.Syntax.AST,
                       -- Language.Cogs.Types.DataKind,
                       -- Language.Sequent.Core.Syntax.AST,
                       -- Language.Sequent.Core.Evaluation.Interpret,
                       -- Language.Sequent.Untyped.Syntax.AST,
                       -- Language.Sequent.Untyped.Evaluation.Interpret,
                       Cogs.Common,
                       Cogs.Preprocessor,
                       Cogs.LanguageDef,
                       Cogs.Language.SystemT.Syntax,
                       Cogs.Language.SystemT.Pretty,
                       Cogs.Language.SystemT.Parser,
                       Cogs.Language.SystemT.TypeCheck,
                       Cogs.Language.SystemT.Evaluate

  build-depends:       base                 >= 4.8,
                       parsec               >= 3.1,
                       text                 >= 1.2,
                       mtl                  >= 2.2

  hs-source-dirs:      src
  default-language:    Haskell2010

executable cogs
  main-is:             Cogs.hs
  hs-source-dirs:      src/Commands

  build-depends:       base                 >= 4.8,
                       cogs                 >= 0.1,
                       mtl                  >= 2.1,
                       optparse-applicative >= 0.11,
                       text                 >= 1.2

  default-language:    Haskell2010